assets/sass/frontend/site/_nav.sass
header#menu
    padding: 1.25rem
    transition: padding 0.8s ease, background-color 0.8s ease
    font-weight: 400

    @include media-breakpoint-up(lg)
        &:before
            content: ''
            position: absolute
            top: 0
            left: 0
            width: 100%
            height: 100%
            background: linear-gradient(180deg, rgba(45,45,45,0.6666) 0%, rgba(255,255,255,0) 100%)
            z-index: -1

    &.navbar-default
        border: none
        background-color: rgba(0, 0, 0, 0.3)

        @include media-breakpoint-up(lg)
            background-color: transparent

        .navbar-header
            width: 100%

            @include media-breakpoint-up(lg)
                width: auto

        .navbar-collapse
            padding: 1rem 0
            border: none

            @include media-breakpoint-up(lg)
                padding: 0

        .dropdown-menu > .dropdown-item,
        .navbar-nav > li
            > a
                background: transparent
                text-transform: uppercase
                color: $color-secondary
                font-size: 0.75rem
                letter-spacing: 0.025rem
                transition: all 0.125s ease-in

                &:hover
                    color: $color-teritary

            a.active
                font-weight: $font-weight-bold
                color: $color-teritary !important

        .flag
            display: inline-block

            svg
                height: 10px
                width: 20px
                margin: 0 3px 3px 0

        .dropdown-menu
            background: transparent
            min-width: 1px
            text-align: center
            box-shadow: none
            border: 0

            .active
                font-weight: $font-weight-bold
                background: none

            > .dropdown-item
                text-align: left

                &:hover
                    background: transparent

                > a
                    color: $color-secondary
                    display: inline-block
                    border-bottom: 1px solid transparent
                    text-decoration: none

                    &:hover
                        background: transparent
                        color: $color-teritary

            @include media-breakpoint-up(sm)
                text-align: center

        .navbar-toggler
            width: 40px
            padding-right: 0
            &:focus
                outline: none
            .line
                display: block
                height: 3px
                background-color: $color-secondary
                margin-bottom: 5px
                opacity: 1
                transition: all 0.125s ease-in
                &:last-child
                    margin-bottom: 0

            &:not(.collapsed)
                .line:nth-child(1)
                    transform: rotate(45deg)
                    transform-origin: 5px 8px
                .line:nth-child(2)
                    opacity: 0
                .line:nth-child(3)
                    transform: rotate(-45deg)
                    transform-origin: 4px -5px

    a.navbar-brand
        margin: 0.5rem 0 0 0
        padding: 0
        height: 35px
        color: $color-secondary
        line-height: 2rem

        img
            height: 100%
            border-radius: 50%
            margin-right: 0.25rem
            display: none

    &.on,
    &.force-on
        background-color: $color-secondary
        padding: 0 !important

        &:before
            display: none

        &.navbar-default
            .navbar-nav > li
                > a
                    color: $color-primary

                    &:hover
                        color: $color-teritary

                &.active a, a:focus
                    font-weight: $font-weight-bold

            .dropdown-menu
                background: $color-secondary

                > li > a
                    color: $color-primary

        a.navbar-brand
            color: $color-primary

            img
                display: inline-block
        .navbar-toggler
            .line
                background-color: $color-primary

    &.navbar-expand-lg > .container,
    &.navbar-expand-lg > .container-fluid
        padding-left: calc(#{$grid-gutter-width} / 2)
        padding-right: calc(#{$grid-gutter-width} / 2)

        @include media-breakpoint-up(md)
            padding-left: $grid-gutter-width
            padding-right: $grid-gutter-width

